# Hand-Tracker

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
hand_tracker/: __init__.py  __main__.py  app.py  camera.py  games.py  gestures.py  hands.py  launcher.py  overlay.py  slides.py  virtual_mouse.py
scripts/: run_hand_tracker.py
tests/: test_gestures.py
